# spark-sandbox

./: .gitignore  Containerfile  README.md  compose.yaml  pyproject.toml  scratch.py  start_data_node.sh  start_name_node.sh
data/: README
hadoop-config/: configuration.xsl  core-site.xml  hdfs-site.xml
logs/: .gitignore
